--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,8 +7,8 @@ author_profile: true
 
 Test
 
-{% include base_path %}
+#{% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+#{% for post in site.teaching reversed %}
+#  {% include archive-single.html %}
+#{% endfor %}
