--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,7 +5,9 @@ permalink: /teaching/
 author_profile: true
 ---
 
-Test
+<iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=yhbaJiOdnBM&list=PLg-TbObGUf2_bT4rAJeR6A2ntmbGRscpC&index=1">
+</iframe>
 
 <!-- {% include base_path %} -->
 
