--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,9 +5,11 @@ permalink: /teaching/
 author_profile: true
 ---
 
-<iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=yhbaJiOdnBM&list=PLg-TbObGUf2_bT4rAJeR6A2ntmbGRscpC&index=1">
+<iframe width="1206" height="678" 
+src="https://www.youtube.com/embed/yhbaJiOdnBM?list=PLg-TbObGUf2_bT4rAJeR6A2ntmbGRscpC" 
+frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
+
 
 <!-- {% include base_path %} -->
 
