--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,6 +4,9 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
+<head>
+<title>2020</title>
+</head>
 
 <iframe width="854" height="480" 
 src="https://www.youtube.com/embed/yhbaJiOdnBM?list=PLg-TbObGUf2_bT4rAJeR6A2ntmbGRscpC" 
