--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,16 +4,19 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-<head>
-<title>2020</title>
-</head>
+<body>
+
+<div class="header">
+  <h1>2020</h1>
+  <p>Description</p>
+</div>
 
 <iframe width="854" height="480" 
 src="https://www.youtube.com/embed/yhbaJiOdnBM?list=PLg-TbObGUf2_bT4rAJeR6A2ntmbGRscpC" 
 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 
-
+</body>
 <!-- {% include base_path %} -->
 
 <!-- {% for post in site.teaching reversed %} -->
