--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,8 +7,8 @@ author_profile: true
 <body>
 
 <div class="header">
-  <h1>2020</h1>
-  <p>Description</p>
+  <h2>2020</h2>
+  <h3>Description</h3>
 </div>
 
 <iframe width="854" height="480" 
