--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -9,6 +9,14 @@ author_profile: true
 <div class="header">
   <h2>2020</h2>
   <h3>Description</h3>
+  <p>In Michaelmas 2020, the Oxford Foundry, CodeSoc and OxWoCS partnered to deliver an introductory course for coding in Python. 
+    As the OxWoCS representative for the course, I organised the course, created and delivered content, taught online in Zoom 
+    and seeked volunteers to support with the teaching. If you are interested to follow the course, there are teasers for the course below or contact me for more information.
+    This course is aimed for beginners and for people with no programming experience from any discipline.
+    
+    I hope you enjoy it!
+    
+   <h3>Session 1</h3>
 </div>
 
 <iframe width="854" height="480" 
