adding sessions 2 and 3

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -11,7 +11,8 @@ author_profile: true
   <h3>Description</h3>
   <p>In Michaelmas 2020, the Oxford Foundry, CodeSoc and OxWoCS partnered to deliver an introductory course for coding in Python. 
     As the OxWoCS representative for the course, I organised the course, created and delivered content, taught online in Zoom 
-    and seeked volunteers to support with the teaching. If you are interested to follow the course, there are teasers for the course below or contact me for more information.
+    and seeked volunteers to support with the teaching, in collaboration with CodeSoc and Oxford Foundry. If you are interested to follow the course, 
+    there are teasers for the course below or contact me for more information.
     This course is aimed for beginners and for people with no programming experience from any discipline.
     
     I hope you enjoy it!
@@ -19,12 +20,30 @@ author_profile: true
    <h3>Session 1</h3>
 </div>
 
-<iframe width="854" height="480" 
+<iframe width="1206" height="678" 
 src="https://www.youtube.com/embed/yhbaJiOdnBM?list=PLg-TbObGUf2_bT4rAJeR6A2ntmbGRscpC" 
 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
+  
+<div class="header">  
+   <h3>Session 2</h3>
+</div>
+  
+<iframe width="1206" height="678"
+src="https://www.youtube.com/embed/KnOYeiWHcd4?list=PLg-TbObGUf28GcsDjHOttMws0M6h7-11B"
+frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
 
+<div class="header">  
+   <h3>Session 3</h3>
+</div>
+  
+<iframe width="1206" height="754"
+src="https://www.youtube.com/embed/cvW2f7ljj20?list=PLg-TbObGUf2-MI9FBdh1GHOgRjDvppvfI"
+frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
 </body>
+
 <!-- {% include base_path %} -->
 
 <!-- {% for post in site.teaching reversed %} -->
