adding further description for each of the sessions

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -12,12 +12,17 @@ author_profile: true
   <p>In Michaelmas 2020, the Oxford Foundry, CodeSoc and OxWoCS partnered to deliver an introductory course for coding in Python. 
     As the OxWoCS representative for the course, I organised the course, created and delivered content, taught online in Zoom 
     and seeked volunteers to support with the teaching, in collaboration with CodeSoc and Oxford Foundry. If you are interested to follow the course, 
-    there are teasers for the course below or contact me for more information.
-    This course is aimed for beginners and for people with no programming experience from any discipline.
+    there are teasers for the course below or contact me for more information and check this 
+    <a href="https://www.oxfordfoundry.ox.ac.uk/tech-workshops">website</a> for more info. This course is aimed for beginners and for people with no programming experience from any discipline.
     
     I hope you enjoy it!
     
    <h3>Session 1</h3>
+   <ul>
+    <li>Python install: mac</li>
+    <li>Python install: windows</li>
+    <li>Intro to python and Using jupyter notebook</li>
+   </ul>  
 </div>
 
 <iframe width="1206" height="678" 
@@ -27,6 +32,14 @@ frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media
   
 <div class="header">  
    <h3>Session 2</h3>
+   <ul>
+    <li>Variables and data structures overview</li>
+    <li>Numbers</li>
+    <li>Lists and strings</li>
+    <li>Dictionaries</li>
+    <li>User input</li>
+    <li>Comments</li>
+   </ul> 
 </div>
   
 <iframe width="1206" height="678"
@@ -36,6 +49,16 @@ frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media
 
 <div class="header">  
    <h3>Session 3</h3>
+   <ul>
+    <li>Conditional Statements Overview</li>
+    <li>Basic logic</li>
+    <li>If statement</li>
+    <li>Else and else if statement</li>
+    <li>Loops overview</li>
+    <li>For loop</li>
+    <li>While loop</li>
+    <li>Break statement</li>
+   </ul> 
 </div>
   
 <iframe width="1206" height="754"
